1,适配native-image 2,去除运行时注入jar的能力帮助native-image 3,支持apt的注解直接在编译期将运行时生成的字节码注入到jar中